Add basic text to the portfolio.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -9,8 +9,57 @@
   <body>
     <div id="content">
       <h1>Desmond Michael Talton</h1>
-      <p>This is my portfolio.</p>
-      <p>Click here to get a random message:</p>
+
+            <h3>
+                "Hay, my name ih Dehmun Taltun"
+            </h3>
+
+            <p>
+                Since I've been in college at Georgia Tech, I've been teased for my dialect. <br>
+                I am from Macon, Georgia (which is a city, but I guess its the country in the middle of nowhere) and 
+                that's just how we talk down here. <br> 
+                From the slang and "lingo" I employ to the southern drawl I deliver it with, the way I talk is just 
+                something that makes me... me. In my opinion, the way I talk is the best way to go about communicating,
+                so you can tease me about it. I am not insecure of it. 
+            </p>
+
+            <h4>
+                Something I was insecure about, though, was my weight
+            </h4>
+
+            <p>
+                For most of my life I was pretty obese. I had always been a big guys and say it as an inevitability, but
+                I never liked it. I felt like my size was the first impression that characterized who I was before I got 
+                the opportunity to do so.
+            </p>
+
+            <p>
+                ... That's not how it actually works <br>
+                                                    ... but thats how I saw it at the time.
+            </p>
+
+            <p>
+                In 2019, I finally decided to take control of my situation. I changed my diet and started to be a 
+                lot more active.
+            </p>
+
+            <p>
+                Honestly, I feel its my biggest accomplishment to date. I am not satisfied yet, though. I feel I could 
+                still lose some more weight, but I definitely have a healthier view of my self-image. <br>
+                While, in hindsight, it doesn't make sense (most insecurities never do, to be honest), this really opened 
+                the door to make me feel like I can be more of myself.
+            </p>
+
+            <h3>
+                So... who am I, really?
+            </h3>
+
+            <p>
+                My name is Desmond Talton. I am a rising 3rd year Computer Science major at the Georgia Institute of Technology.
+                I am particularly interested in web app development on the front and back end. Overall, I am just a guy who enjoys 
+                having fun and being creative. 
+            </p>
+            
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
     </div>
