Changed style in CSS.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -20,7 +20,6 @@
                 that's just how we talk down here. <br> 
                 From the slang and "lingo" I employ to the southern drawl I deliver it with, the way I talk is just 
                 something that makes me... me. In my opinion, the way I talk is the best way to go about communicating,
-                so you can tease me about it. I am not insecure of it. 
             </p>
 
             <h4>
@@ -28,7 +27,7 @@
             </h4>
 
             <p>
-                For most of my life I was pretty obese. I had always been a big guys and say it as an inevitability, but
+                For most of my life I was pretty obese. I had always been a big guy and say it as an inevitability, but
                 I never liked it. I felt like my size was the first impression that characterized who I was before I got 
                 the opportunity to do so.
             </p>
@@ -59,6 +58,11 @@
                 I am particularly interested in web app development on the front and back end. Overall, I am just a guy who enjoys 
                 having fun and being creative. 
             </p>
+
+            <h2>
+                Creativity <br>
+                a blog
+            </h2>
             
       <button onclick="addRandomGreeting()">Hello</button>
       <div id="greeting-container"></div>
