Move image width/height attributes to style.css file

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -11,8 +11,7 @@
         <img src="/desmondsimages/headerpic.png" 
              alt="Dez Image #1" 
              style="float:left;"
-             width="150px;"
-             height="150px;">
+              class="image1">
         <h1>
              get to know Dez
         </h1>
@@ -30,8 +29,7 @@
             <img src="/desmondsimages/dezinsuit.jpg" 
             alt="Dez Image #2" 
             style="float:right;"
-            width="300px;"
-            height="300px;">
+            class="image2">
             "Hay, my name ih Dehmun Taltun"
         </h>
             <p> 
@@ -47,8 +45,7 @@
             <img src="/desmondsimages/bigdez.jpg" 
                 alt="Dez Image #3" 
                 style="float:left;"
-                width="200px;"
-                height="200x;">
+               class="image4">
             <p class="leftpad1">
                 <strong>Something I was insecure about, though, was my weight</strong><br><br>
 
@@ -64,8 +61,7 @@
             <img src="/desmondsimages/slimdez.JPG" 
                 alt="Dez Image #4" 
                 style="float:right;"
-                width="200px;"
-                height="200x;">
+                 class="image4">
             <p>
                 In 2019, I finally decided to take control of my situation. I changed my diet and started to be a 
                 lot more active.
@@ -84,9 +80,7 @@
 
             <img src="/desmondsimages/polaroidwithfriends.jpg"
                 alt="Dez Image #5"
-                class="center"
-                width="700px;"
-                height="350px">
+                class="image5">
             <p>
                 My name is Desmond Talton. I am a rising 3rd year Computer Science major at the Georgia Institute of Technology.
                 I am particularly interested in web app development on the front and back end. Outside of my "professional" life,
@@ -99,33 +93,23 @@
                 </h>
                 <img src="/desmondsimages/dezcoonbldng.jpg"
                     alt="Dez Image #6"
-                    class="center"
-                    width="350px;"
-                    height="350px">
+                    class="center gallery">
                 <p> Desmond in front of his favorite building at Georgia Tech.</p>
                 <img src="/desmondsimages/dezjordramsbeach.jpg"
                     alt="Dez Image #6"
-                    class="center"
-                    width="350px;"
-                    height="350px">
+                    class="center gallery">
                 <p> Desmond with his friends, Jordan and Ramse, during Spring Break.</p>
                 <img src="/desmondsimages/dezngray.JPG"
                     alt="Dez Image #6"
-                    class="center"
-                    width="350px;"
-                    height="350px">
+                    class="center gallery">
                 <p> Desmond with his friend, Grayson, at Georgia Tech.</p>
                 <img src="/desmondsimages/deznsam.jpg"
                     alt="Dez Image #6"
-                    class="center"
-                    width="350px;"
-                    height="350px">
+                    class="center gallery">
                 <p> Desmond with his friend, Sam, during Spring Break.</p>
                 <img src="/desmondsimages/deznrani.jpg"
                     alt="Dez Image #6"
-                    class="center"
-                    width="350px;"
-                    height="350px">
+                    class="center gallery">
                 <p> Desmond in a jacuzzi with his friend, Rani. </p>
             </div>
     </div>
