Resolve comments from code review.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -8,110 +8,85 @@
   </head>
   <body>
     <div id="content">
-        <img src="/desmondsimages/headerpic.png" 
-             alt="Dez Image #1" 
-             style="float:left;"
-              class="image1">
+        <img src="/desmondsimages/headerpic.png" alt="Dez Image #1" class="image1 floatleft">
         <h1>
-             get to know Dez
+            get to know Dez
         </h1>
-            <p class="leftpad1">
-                <strong>NAME</strong>: Desmond Talton <br><br>
-                <strong>COLLEGE</strong>: The Georgia Institute of Technology <br><br>
-                <strong>MAJOR</strong>: Computer Science <br><br>
-            </p>
-            <button onclick="funFactGenerator()">Random Fun Fact</button>
-            <div id="factgetter">
-                Press to Generate a Fun Fact.
-            </div>    
-        <h>
+        <p class="leftpad1">
+            <strong>NAME</strong>: Desmond Talton <br><br>
+            <strong>COLLEGE</strong>: The Georgia Institute of Technology <br><br>
+            <strong>MAJOR</strong>: Computer Science <br><br>
+        </p>
+        <button onclick="funFactGenerator()">Random Fun Fact</button>
+        <div id="factgetter">
+            Press to Generate a Fun Fact.
+        </div>    
+        <p>
             <br><br>
-            <img src="/desmondsimages/dezinsuit.jpg" 
-            alt="Dez Image #2" 
-            style="float:right;"
-            class="image2">
+            <img src="/desmondsimages/dezinsuit.jpg" alt="Dez Image #2" class="image2 floatright">
             "Hay, my name ih Dehmun Taltun"
-        </h>
-            <p> 
-                <strong> I've been in college at Georgia Tech, I've been teased for my dialect. </strong><br><br>
+        </p>
+        <p class = "description"> 
+            <strong> I've been in college at Georgia Tech, I've been teased for my dialect. </strong><br><br>
 
-                I am from Macon, Georgia (which is a city, but I guess its the outback country in the middle of nowhere) and 
-                that's just how we talk down here. <br><br>
+            I am from Macon, Georgia (which is a city, but I guess its the outback country in the middle of nowhere) and 
+            that's just how we talk down here. <br><br>
 
-                From the slang and "lingo" I employ to the southern drawl I deliver it with, the way I talk is just 
-                something that makes me... me. In my opinion, the way I talk is the best way to go about communicating.
-                <br><br><br><br>
-            </p>
-            <img src="/desmondsimages/bigdez.jpg" 
-                alt="Dez Image #3" 
-                style="float:left;"
-               class="image4">
-            <p class="leftpad1">
-                <strong>Something I was insecure about, though, was my weight</strong><br><br>
+            From the slang and "lingo" I employ to the southern drawl I deliver it with, the way I talk is just 
+            something that makes me... me. In my opinion, the way I talk is the best way to go about communicating.
+            <br>
+        </p>
+        <img src="/desmondsimages/bigdez.jpg" alt="Dez Image #3" class="image4 floatleft">
+        <p class="leftpad1">
+            <strong>Something I was insecure about, though, was my weight</strong><br><br>
 
-                For most of my life I was pretty obese. I had always been a big guy and saw it as an inevitability, but
-                I never liked it. I felt like my size was the first impression that characterized who I was before I got 
-                the opportunity to do so.
-                <br>
-            </p>
-            <p class="lefttext leftpad1">
-                <br><br>
-                <i>... That's not how it actually works but thats how I saw it at the time.</i><br><br><br>
-            </p>
-            <img src="/desmondsimages/slimdez.JPG" 
-                alt="Dez Image #4" 
-                style="float:right;"
-                 class="image4">
-            <p>
-                In 2019, I finally decided to take control of my situation. I changed my diet and started to be a 
-                lot more active.
-            </p>
-            <p>
-                Honestly, I feel its my biggest accomplishment to date. I am not satisfied yet, though. I feel I could 
-                still lose some more weight, but I definitely have a healthier view of my self-image. <br>
-                While, in hindsight, it doesn't make sense (most insecurities never do, to be honest), this really opened 
-                the door to make me feel like I can be more of myself.
-                <br><br>
-            </p>
+            For most of my life I was pretty obese. I had always been a big guy and saw it as an inevitability, but
+            I never liked it. I felt like my size was the first impression that characterized who I was before I got 
+            the opportunity to do so.
+            <br>
+        </p>
+        <p class="lefttext leftpad1">
+            <br><br>
+            <i>... That's not how it actually works but thats how I saw it at the time.</i><br><br><br>
+        </p>
+        <img src="/desmondsimages/slimdez.JPG" alt="Dez Image #4" class="image4 floatright">
+        <p>
+            In 2019, I finally decided to take control of my situation. I changed my diet and started to be a 
+            lot more active.
+        </p>
+        <p>
+            Honestly, I feel its my biggest accomplishment to date. I am not satisfied yet, though. I feel I could 
+            still lose some more weight, but I definitely have a healthier view of my self-image. <br>
+            While, in hindsight, it doesn't make sense (most insecurities never do, to be honest), this really opened 
+            the door to make me feel like I can be more of myself.
+            <br><br>
+        </p>
         <div id="whoamI">
         <h class="bigtext centertext">
             <strong>So... who am I, really?</strong>
         </h>
-
-            <img src="/desmondsimages/polaroidwithfriends.jpg"
-                alt="Dez Image #5"
-                class="image5">
-            <p>
-                My name is Desmond Talton. I am a rising 3rd year Computer Science major at the Georgia Institute of Technology.
-                I am particularly interested in web app development on the front and back end. Outside of my "professional" life,
-                I enjoy being around my enjoying laughs with my friends and being creative on my own means.
-            </p>
+        <img src="/desmondsimages/polaroidwithfriends.jpg" alt="Dez Image #5" class="image5">
+        <p>
+            My name is Desmond Talton. I am a rising 3rd year Computer Science major at the Georgia Institute of Technology.
+            I am particularly interested in web app development on the front and back end. Outside of my "professional" life,
+            I enjoy being around my enjoying laughs with my friends and being creative on my own means.
+        </p>
         </div>
-            <div id="blog">
-                <h class="bigtext">
-                    <strong>Desmond's Photo Gallery</strong><br>
-                </h>
-                <img src="/desmondsimages/dezcoonbldng.jpg"
-                    alt="Dez Image #6"
-                    class="center gallery">
-                <p> Desmond in front of his favorite building at Georgia Tech.</p>
-                <img src="/desmondsimages/dezjordramsbeach.jpg"
-                    alt="Dez Image #6"
-                    class="center gallery">
-                <p> Desmond with his friends, Jordan and Ramse, during Spring Break.</p>
-                <img src="/desmondsimages/dezngray.JPG"
-                    alt="Dez Image #6"
-                    class="center gallery">
-                <p> Desmond with his friend, Grayson, at Georgia Tech.</p>
-                <img src="/desmondsimages/deznsam.jpg"
-                    alt="Dez Image #6"
-                    class="center gallery">
-                <p> Desmond with his friend, Sam, during Spring Break.</p>
-                <img src="/desmondsimages/deznrani.jpg"
-                    alt="Dez Image #6"
-                    class="center gallery">
-                <p> Desmond in a jacuzzi with his friend, Rani. </p>
-            </div>
+        <div id="blog">
+            <h class="bigtext">
+                <strong>Desmond's Photo Gallery</strong><br>
+            </h>
+            <img src="/desmondsimages/dezcoonbldng.jpg" alt="Dez Image #6" class="center gallery">
+            <p> Desmond in front of his favorite building at Georgia Tech.</p>
+            <img src="/desmondsimages/dezjordramsbeach.jpg" alt="Dez Image #6" class="center gallery">
+            <p> Desmond with his friends, Jordan and Ramse, during Spring Break.</p>
+            <img src="/desmondsimages/dezngray.JPG" alt="Dez Image #6" class="center gallery">
+            <p> Desmond with his friend, Grayson, at Georgia Tech.</p>
+            <img src="/desmondsimages/deznsam.jpg" alt="Dez Image #6" class="center gallery">
+            <p> Desmond with his friend, Sam, during Spring Break.</p>
+            <img src="/desmondsimages/deznrani.jpg" alt="Dez Image #6" class="center gallery">
+            <p> Desmond in a jacuzzi with his friend, Rani. </p>
+        </div>
     </div>
   </body>
 </html>
