--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -24,10 +24,10 @@
         <p>
             <br><br>
             <img src="/desmondsimages/dezinsuit.jpg" alt="Dez Image #2" class="image2 floatright">
-            "Hay, my name ih Dehmun Taltun"
+            <strong>"Hay, my name ih Dehmun Taltun"</strong>
         </p>
         <p class = "description"> 
-            <strong> I've been in college at Georgia Tech, I've been teased for my dialect. </strong><br><br>
+            I've been in college at Georgia Tech, I've been teased for my dialect. <br><br>
 
             I am from Macon, Georgia (which is a city, but I guess its the outback country in the middle of nowhere) and 
             that's just how we talk down here. <br><br>
