Modify portfolio to use fetch requests for Fun Fact Generator

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -17,7 +17,7 @@
             <strong>COLLEGE</strong>: The Georgia Institute of Technology <br><br>
             <strong>MAJOR</strong>: Computer Science <br><br>
         </p>
-        <button onclick="funFactGenerator()">Random Fun Fact</button>
+        <button onclick="serverFunFact()">Random Fun Fact</button>
         <div id="factgetter">
             Press to Generate a Fun Fact.
         </div>    
