Design comment section for portfolio UI.

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -87,6 +87,15 @@
             <img src="/desmondsimages/deznrani.jpg" alt="Dez Image #6" class="center gallery">
             <p> Desmond in a jacuzzi with his friend, Rani. </p>
         </div>
+        <h>COMMENTS</h>
+        <div id="thecomments"></div>
+        <div id="commentsection">
+                <p>Type a comment:</p>
+                <input type="text" name="commentpost" value="" id="textfield">
+                    <button onclick="showComments()"></button>
+                <br/><br/>
+               </input>
+        </div>
     </div>
   </body>
 </html>
