Implement data store

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -89,6 +89,9 @@
         </div>
         <h>COMMENTS</h>
         <div id="thecomments"></div>
+        <script>
+            loadComments();
+        </script>
         <div id="commentsection">
                 <p>Type a comment:</p>
                 <input type="text" name="commentpost" value="" id="textfield">
