--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -96,7 +96,7 @@
             </select>
             </form>
             <button onclick="refreshComments()">Refresh.</button>
-            <button onclick="deleteComments()">Clear.</button>
+            <button onclick="deleteAllComments()">Clear.</button>
         </p>
         <div id="thecomments"></div>
         <script>
