Implement translation and authentication

--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -95,6 +95,13 @@
                 <option value="10">10</option>
             </select>
             </form>
+            <select id="language">
+                <option value="es">English</option>
+                <option value="zh">Chinese</option>
+                <option value="es">Spanish</option>
+                <option value="hi">Hindi</option>
+                <option value="ar">Arabic</option>
+            </select>
             <button onclick="refreshComments()">Refresh.</button>
             <button onclick="deleteAllComments()">Clear.</button>
         </p>
