--- a/portfolio/src/main/webapp/index.html
+++ b/portfolio/src/main/webapp/index.html
@@ -96,7 +96,7 @@
             </select>
             </form>
             <select id="language">
-                <option value="es">English</option>
+                <option value="en">English</option>
                 <option value="zh">Chinese</option>
                 <option value="es">Spanish</option>
                 <option value="hi">Hindi</option>
